--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "cloudinary-labs/cloudinary-laravel": "^2.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "kreait/laravel-firebase": "^4.2",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.15",
         "laravel/tinker": "^2.5",
         "predis/predis": "^2.3",
         "pusher/pusher-php-server": "^7.2",
-
         "tymon/jwt-auth": "^1.0@dev"
     },
     "require-dev": {
