--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "@joeattardi/emoji-button": "^4.6.4",
         "dayjs": "^1.11.13",
         "laravel-echo": "^1.17.1",
         "pusher-js": "^8.4.0-rc2"
